# pyopengenai

./: README.md  build_pip.txt  pyproject.toml  requirements.txt  run_build.sh  setup.cfg
experimentals/huggingchat_exp/: v1.py  v2.py  v3.py  v4.py
src/: __init__.py
src/opengenai/: __init__.py
src/opengenai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/opengenai/langchain_ollama/: __init__.py  ollama.py  server.py
src/opengenai/researcher_ai/: __init__.py
src/opengenai/researcher_ai/main/: main.py  prompts.py  researcher.py  semantic_chunker.py
src/opengenai/researcher_ai/main/content_extractor/: main.py
src/opengenai/researcher_ai/main/parse_url/: html_parser.py
src/opengenai/researcher_ai/main/search_provider/: base.py  searcher.py
src/opengenai/web_search/: __init__.py  agent.py  embed_search.py  html_parser.py  optimized_multi_query_searcher.py
src/pygenai/researcher_ai/main/: main.py
src/pygenai/researcher_ai/main/content_extractor/: __init__.py
src/pygenai/researcher_ai/main/llm_service/: base.py
src/pygenai/researcher_ai/main/parse_url/: base.py
src/pygenai/web_search/: crewai_web_serach_qa.py  optimized_multi_query_searcher.py
src/pyopengenai/: __init__.py  sample_run.py  setup_local.py
src/pyopengenai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pyopengenai/ai_searcher/: __init__.py  ai_simple_searcher.py
src/pyopengenai/custom_ollama/: __init__.py  custom_ollama.py  server.py
src/pyopengenai/langchain_ollama/: server.py
src/pyopengenai/pdf_retreiver/: main.py
src/pyopengenai/query_based_content_retrieval/: __init__.py  main.py
src/pyopengenai/query_master/: __init__.py  heirarchical_tree.py  query_refiner.py  search_queries_generator.py  search_retriever.py  text_splitter.py  wordllama_embeds.py
src/pyopengenai/researcher_ai/: __init__.py
src/pyopengenai/researcher_ai/main/: __init__.py  main.py  researcher.py  semantic_chunker.py
src/pyopengenai/researcher_ai/tests/: url_test.py
src/pyopengenai/spotlight_llm/: prompts.py  spotlight_llm.py
src/pyopengenai/twitter_scrapper/: __init__.py  scrapper.py
src/pyopengenai/web_search/: __init__.py  agent.py  crewai_web_serach_qa_backup.py  html_parser.py  optimized_multi_query_searcher.py  text_filter.py
tests/: crewai_web_serach_qa.py  dummy.py  google_search_testing.py  html_parsing.py  multiagent_query_test.py  ollama_chat_test.py  res.md  results.txt  twitter_extraction.py  websearch_test.py  wordllama_embed_retriever.py
(+4 files in other folders)
