[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyopengenai"
version = "0.3.0"
description = "A powerful web content fetcher and processor"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "langchain_ollama",
    "aiohttp",
    "selenium==4.25.0",
    "webdriver_manager",
    "beautifulsoup4",
    "requests",
    "langchain_text_splitters",
    "wordllama",
    "fastembed",
    "langchain",
    "scikit-learn",
    "trafilatura",
    "nltk",
    "transformers",
    "sumy",
    "nodriver",
    "weasyprint",
    "markdown",
    "pypdf==4.2.0",
    "torch",
    "urllib3==1.26.19",
    "tiktoken",
    "PyPDF2"


    # Add any other dependencies your package needs
]

[project.urls]
"Homepage" = "https://github.com/yourusername/pyopengenai"
"Bug Tracker" = "https://github.com/yourusername/pyopengenai/issues"