[metadata]
name = pyopengenai
version = 0.2.1
author = Kammari Santhosh
author_email = santhoshkammari1999@gmail.com
description = A powerful web content fetcher and processor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/pyopengenai
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
